Projeto/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> program newlines lista_regras token_section
Rule 2     program -> PROGRAM COLON NON_TERMINAL
Rule 3     lista_regras -> regra lista_regras
Rule 4     lista_regras -> <empty>
Rule 5     regra -> NON_TERMINAL ARROW lista_producoes newlines
Rule 6     regra -> NON_TERMINAL ARROW lista_producoes
Rule 7     lista_producoes -> producao lista_producoes_rest
Rule 8     lista_producoes_rest -> PIPE producao lista_producoes_rest
Rule 9     lista_producoes_rest -> <empty>
Rule 10    producao -> simbolo lista_simbolos
Rule 11    lista_simbolos -> simbolo lista_simbolos
Rule 12    lista_simbolos -> <empty>
Rule 13    simbolo -> EPSILON
Rule 14    simbolo -> TERMINAL
Rule 15    simbolo -> NON_TERMINAL
Rule 16    token_section -> token_decl token_section
Rule 17    token_section -> <empty>
Rule 18    token_decl -> TERMINAL EQUALS REGEX newlines
Rule 19    token_decl -> TERMINAL EQUALS REGEX
Rule 20    newlines -> NEWLINE
Rule 21    newlines -> NEWLINE newlines

Terminals, with rules where they appear

ARROW                : 5 6
COLON                : 2
EPSILON              : 13
EQUALS               : 18 19
NEWLINE              : 20 21
NON_TERMINAL         : 2 5 6 15
PIPE                 : 8
PROGRAM              : 2
REGEX                : 18 19
TERMINAL             : 14 18 19
error                : 

Nonterminals, with rules where they appear

init                 : 0
lista_producoes      : 5 6
lista_producoes_rest : 7 8
lista_regras         : 1 3
lista_simbolos       : 10 11
newlines             : 1 5 18 21
producao             : 7 8
program              : 1
regra                : 3
simbolo              : 10 11
token_decl           : 16
token_section        : 1 16

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . program newlines lista_regras token_section
    (2) program -> . PROGRAM COLON NON_TERMINAL

    PROGRAM         shift and go to state 3

    init                           shift and go to state 1
    program                        shift and go to state 2

state 1

    (0) S' -> init .



state 2

    (1) init -> program . newlines lista_regras token_section
    (20) newlines -> . NEWLINE
    (21) newlines -> . NEWLINE newlines

    NEWLINE         shift and go to state 5

    newlines                       shift and go to state 4

state 3

    (2) program -> PROGRAM . COLON NON_TERMINAL

    COLON           shift and go to state 6


state 4

    (1) init -> program newlines . lista_regras token_section
    (3) lista_regras -> . regra lista_regras
    (4) lista_regras -> .
    (5) regra -> . NON_TERMINAL ARROW lista_producoes newlines
    (6) regra -> . NON_TERMINAL ARROW lista_producoes

    TERMINAL        reduce using rule 4 (lista_regras -> .)
    $end            reduce using rule 4 (lista_regras -> .)
    NON_TERMINAL    shift and go to state 9

    lista_regras                   shift and go to state 7
    regra                          shift and go to state 8

state 5

    (20) newlines -> NEWLINE .
    (21) newlines -> NEWLINE . newlines
    (20) newlines -> . NEWLINE
    (21) newlines -> . NEWLINE newlines

    NON_TERMINAL    reduce using rule 20 (newlines -> NEWLINE .)
    TERMINAL        reduce using rule 20 (newlines -> NEWLINE .)
    $end            reduce using rule 20 (newlines -> NEWLINE .)
    NEWLINE         shift and go to state 5

    newlines                       shift and go to state 10

state 6

    (2) program -> PROGRAM COLON . NON_TERMINAL

    NON_TERMINAL    shift and go to state 11


state 7

    (1) init -> program newlines lista_regras . token_section
    (16) token_section -> . token_decl token_section
    (17) token_section -> .
    (18) token_decl -> . TERMINAL EQUALS REGEX newlines
    (19) token_decl -> . TERMINAL EQUALS REGEX

    $end            reduce using rule 17 (token_section -> .)
    TERMINAL        shift and go to state 14

    token_section                  shift and go to state 12
    token_decl                     shift and go to state 13

state 8

    (3) lista_regras -> regra . lista_regras
    (3) lista_regras -> . regra lista_regras
    (4) lista_regras -> .
    (5) regra -> . NON_TERMINAL ARROW lista_producoes newlines
    (6) regra -> . NON_TERMINAL ARROW lista_producoes

    TERMINAL        reduce using rule 4 (lista_regras -> .)
    $end            reduce using rule 4 (lista_regras -> .)
    NON_TERMINAL    shift and go to state 9

    regra                          shift and go to state 8
    lista_regras                   shift and go to state 15

state 9

    (5) regra -> NON_TERMINAL . ARROW lista_producoes newlines
    (6) regra -> NON_TERMINAL . ARROW lista_producoes

    ARROW           shift and go to state 16


state 10

    (21) newlines -> NEWLINE newlines .

    NON_TERMINAL    reduce using rule 21 (newlines -> NEWLINE newlines .)
    TERMINAL        reduce using rule 21 (newlines -> NEWLINE newlines .)
    $end            reduce using rule 21 (newlines -> NEWLINE newlines .)


state 11

    (2) program -> PROGRAM COLON NON_TERMINAL .

    NEWLINE         reduce using rule 2 (program -> PROGRAM COLON NON_TERMINAL .)


state 12

    (1) init -> program newlines lista_regras token_section .

    $end            reduce using rule 1 (init -> program newlines lista_regras token_section .)


state 13

    (16) token_section -> token_decl . token_section
    (16) token_section -> . token_decl token_section
    (17) token_section -> .
    (18) token_decl -> . TERMINAL EQUALS REGEX newlines
    (19) token_decl -> . TERMINAL EQUALS REGEX

    $end            reduce using rule 17 (token_section -> .)
    TERMINAL        shift and go to state 14

    token_decl                     shift and go to state 13
    token_section                  shift and go to state 17

state 14

    (18) token_decl -> TERMINAL . EQUALS REGEX newlines
    (19) token_decl -> TERMINAL . EQUALS REGEX

    EQUALS          shift and go to state 18


state 15

    (3) lista_regras -> regra lista_regras .

    TERMINAL        reduce using rule 3 (lista_regras -> regra lista_regras .)
    $end            reduce using rule 3 (lista_regras -> regra lista_regras .)


state 16

    (5) regra -> NON_TERMINAL ARROW . lista_producoes newlines
    (6) regra -> NON_TERMINAL ARROW . lista_producoes
    (7) lista_producoes -> . producao lista_producoes_rest
    (10) producao -> . simbolo lista_simbolos
    (13) simbolo -> . EPSILON
    (14) simbolo -> . TERMINAL
    (15) simbolo -> . NON_TERMINAL

    EPSILON         shift and go to state 23
    TERMINAL        shift and go to state 24
    NON_TERMINAL    shift and go to state 19

    lista_producoes                shift and go to state 20
    producao                       shift and go to state 21
    simbolo                        shift and go to state 22

state 17

    (16) token_section -> token_decl token_section .

    $end            reduce using rule 16 (token_section -> token_decl token_section .)


state 18

    (18) token_decl -> TERMINAL EQUALS . REGEX newlines
    (19) token_decl -> TERMINAL EQUALS . REGEX

    REGEX           shift and go to state 25


state 19

    (15) simbolo -> NON_TERMINAL .

    EPSILON         reduce using rule 15 (simbolo -> NON_TERMINAL .)
    TERMINAL        reduce using rule 15 (simbolo -> NON_TERMINAL .)
    NON_TERMINAL    reduce using rule 15 (simbolo -> NON_TERMINAL .)
    PIPE            reduce using rule 15 (simbolo -> NON_TERMINAL .)
    NEWLINE         reduce using rule 15 (simbolo -> NON_TERMINAL .)
    $end            reduce using rule 15 (simbolo -> NON_TERMINAL .)


state 20

    (5) regra -> NON_TERMINAL ARROW lista_producoes . newlines
    (6) regra -> NON_TERMINAL ARROW lista_producoes .
    (20) newlines -> . NEWLINE
    (21) newlines -> . NEWLINE newlines

    NON_TERMINAL    reduce using rule 6 (regra -> NON_TERMINAL ARROW lista_producoes .)
    TERMINAL        reduce using rule 6 (regra -> NON_TERMINAL ARROW lista_producoes .)
    $end            reduce using rule 6 (regra -> NON_TERMINAL ARROW lista_producoes .)
    NEWLINE         shift and go to state 5

    newlines                       shift and go to state 26

state 21

    (7) lista_producoes -> producao . lista_producoes_rest
    (8) lista_producoes_rest -> . PIPE producao lista_producoes_rest
    (9) lista_producoes_rest -> .

    PIPE            shift and go to state 28
    NEWLINE         reduce using rule 9 (lista_producoes_rest -> .)
    NON_TERMINAL    reduce using rule 9 (lista_producoes_rest -> .)
    TERMINAL        reduce using rule 9 (lista_producoes_rest -> .)
    $end            reduce using rule 9 (lista_producoes_rest -> .)

    lista_producoes_rest           shift and go to state 27

state 22

    (10) producao -> simbolo . lista_simbolos
    (11) lista_simbolos -> . simbolo lista_simbolos
    (12) lista_simbolos -> .
    (13) simbolo -> . EPSILON
    (14) simbolo -> . TERMINAL
    (15) simbolo -> . NON_TERMINAL

  ! shift/reduce conflict for TERMINAL resolved as shift
  ! shift/reduce conflict for NON_TERMINAL resolved as shift
    PIPE            reduce using rule 12 (lista_simbolos -> .)
    NEWLINE         reduce using rule 12 (lista_simbolos -> .)
    $end            reduce using rule 12 (lista_simbolos -> .)
    EPSILON         shift and go to state 23
    TERMINAL        shift and go to state 24
    NON_TERMINAL    shift and go to state 19

  ! NON_TERMINAL    [ reduce using rule 12 (lista_simbolos -> .) ]
  ! TERMINAL        [ reduce using rule 12 (lista_simbolos -> .) ]

    simbolo                        shift and go to state 29
    lista_simbolos                 shift and go to state 30

state 23

    (13) simbolo -> EPSILON .

    EPSILON         reduce using rule 13 (simbolo -> EPSILON .)
    TERMINAL        reduce using rule 13 (simbolo -> EPSILON .)
    NON_TERMINAL    reduce using rule 13 (simbolo -> EPSILON .)
    PIPE            reduce using rule 13 (simbolo -> EPSILON .)
    NEWLINE         reduce using rule 13 (simbolo -> EPSILON .)
    $end            reduce using rule 13 (simbolo -> EPSILON .)


state 24

    (14) simbolo -> TERMINAL .

    EPSILON         reduce using rule 14 (simbolo -> TERMINAL .)
    TERMINAL        reduce using rule 14 (simbolo -> TERMINAL .)
    NON_TERMINAL    reduce using rule 14 (simbolo -> TERMINAL .)
    PIPE            reduce using rule 14 (simbolo -> TERMINAL .)
    NEWLINE         reduce using rule 14 (simbolo -> TERMINAL .)
    $end            reduce using rule 14 (simbolo -> TERMINAL .)


state 25

    (18) token_decl -> TERMINAL EQUALS REGEX . newlines
    (19) token_decl -> TERMINAL EQUALS REGEX .
    (20) newlines -> . NEWLINE
    (21) newlines -> . NEWLINE newlines

    TERMINAL        reduce using rule 19 (token_decl -> TERMINAL EQUALS REGEX .)
    $end            reduce using rule 19 (token_decl -> TERMINAL EQUALS REGEX .)
    NEWLINE         shift and go to state 5

    newlines                       shift and go to state 31

state 26

    (5) regra -> NON_TERMINAL ARROW lista_producoes newlines .

    NON_TERMINAL    reduce using rule 5 (regra -> NON_TERMINAL ARROW lista_producoes newlines .)
    TERMINAL        reduce using rule 5 (regra -> NON_TERMINAL ARROW lista_producoes newlines .)
    $end            reduce using rule 5 (regra -> NON_TERMINAL ARROW lista_producoes newlines .)


state 27

    (7) lista_producoes -> producao lista_producoes_rest .

    NEWLINE         reduce using rule 7 (lista_producoes -> producao lista_producoes_rest .)
    NON_TERMINAL    reduce using rule 7 (lista_producoes -> producao lista_producoes_rest .)
    TERMINAL        reduce using rule 7 (lista_producoes -> producao lista_producoes_rest .)
    $end            reduce using rule 7 (lista_producoes -> producao lista_producoes_rest .)


state 28

    (8) lista_producoes_rest -> PIPE . producao lista_producoes_rest
    (10) producao -> . simbolo lista_simbolos
    (13) simbolo -> . EPSILON
    (14) simbolo -> . TERMINAL
    (15) simbolo -> . NON_TERMINAL

    EPSILON         shift and go to state 23
    TERMINAL        shift and go to state 24
    NON_TERMINAL    shift and go to state 19

    producao                       shift and go to state 32
    simbolo                        shift and go to state 22

state 29

    (11) lista_simbolos -> simbolo . lista_simbolos
    (11) lista_simbolos -> . simbolo lista_simbolos
    (12) lista_simbolos -> .
    (13) simbolo -> . EPSILON
    (14) simbolo -> . TERMINAL
    (15) simbolo -> . NON_TERMINAL

  ! shift/reduce conflict for TERMINAL resolved as shift
  ! shift/reduce conflict for NON_TERMINAL resolved as shift
    PIPE            reduce using rule 12 (lista_simbolos -> .)
    NEWLINE         reduce using rule 12 (lista_simbolos -> .)
    $end            reduce using rule 12 (lista_simbolos -> .)
    EPSILON         shift and go to state 23
    TERMINAL        shift and go to state 24
    NON_TERMINAL    shift and go to state 19

  ! NON_TERMINAL    [ reduce using rule 12 (lista_simbolos -> .) ]
  ! TERMINAL        [ reduce using rule 12 (lista_simbolos -> .) ]

    simbolo                        shift and go to state 29
    lista_simbolos                 shift and go to state 33

state 30

    (10) producao -> simbolo lista_simbolos .

    PIPE            reduce using rule 10 (producao -> simbolo lista_simbolos .)
    NEWLINE         reduce using rule 10 (producao -> simbolo lista_simbolos .)
    NON_TERMINAL    reduce using rule 10 (producao -> simbolo lista_simbolos .)
    TERMINAL        reduce using rule 10 (producao -> simbolo lista_simbolos .)
    $end            reduce using rule 10 (producao -> simbolo lista_simbolos .)


state 31

    (18) token_decl -> TERMINAL EQUALS REGEX newlines .

    TERMINAL        reduce using rule 18 (token_decl -> TERMINAL EQUALS REGEX newlines .)
    $end            reduce using rule 18 (token_decl -> TERMINAL EQUALS REGEX newlines .)


state 32

    (8) lista_producoes_rest -> PIPE producao . lista_producoes_rest
    (8) lista_producoes_rest -> . PIPE producao lista_producoes_rest
    (9) lista_producoes_rest -> .

    PIPE            shift and go to state 28
    NEWLINE         reduce using rule 9 (lista_producoes_rest -> .)
    NON_TERMINAL    reduce using rule 9 (lista_producoes_rest -> .)
    TERMINAL        reduce using rule 9 (lista_producoes_rest -> .)
    $end            reduce using rule 9 (lista_producoes_rest -> .)

    lista_producoes_rest           shift and go to state 34

state 33

    (11) lista_simbolos -> simbolo lista_simbolos .

    PIPE            reduce using rule 11 (lista_simbolos -> simbolo lista_simbolos .)
    NEWLINE         reduce using rule 11 (lista_simbolos -> simbolo lista_simbolos .)
    NON_TERMINAL    reduce using rule 11 (lista_simbolos -> simbolo lista_simbolos .)
    TERMINAL        reduce using rule 11 (lista_simbolos -> simbolo lista_simbolos .)
    $end            reduce using rule 11 (lista_simbolos -> simbolo lista_simbolos .)


state 34

    (8) lista_producoes_rest -> PIPE producao lista_producoes_rest .

    NEWLINE         reduce using rule 8 (lista_producoes_rest -> PIPE producao lista_producoes_rest .)
    NON_TERMINAL    reduce using rule 8 (lista_producoes_rest -> PIPE producao lista_producoes_rest .)
    TERMINAL        reduce using rule 8 (lista_producoes_rest -> PIPE producao lista_producoes_rest .)
    $end            reduce using rule 8 (lista_producoes_rest -> PIPE producao lista_producoes_rest .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for TERMINAL in state 22 resolved as shift
WARNING: shift/reduce conflict for NON_TERMINAL in state 22 resolved as shift
WARNING: shift/reduce conflict for TERMINAL in state 29 resolved as shift
WARNING: shift/reduce conflict for NON_TERMINAL in state 29 resolved as shift
